# Realsense_python

./: Image_show with_3D_distance_acquisition.py  Pixel_3D_distance.py  README.md  get_realsense_param.py  intrinsics.json
vision_based_control/: package.xml  setup.cfg  setup.py
vision_based_control/config/: MVBB_output.txt  ur5_3d_construction_move.yaml  ur5_human_robot_interactive_grasp_yolo.yaml  ur5_interactive_grasp_from_human_and_table_yolo.yaml  ur5_vision_based_grasp.yaml  ur5_vision_based_grasp_marker_from_human.yaml
vision_based_control/launch/: ur5_3d_construction_move.launch.py  ur5_human_robot_interactive_grasp.launch.py  ur5_human_robot_interactive_grasp_yolo.launch.py  ur5_human_robot_interactive_grasp_yolo_server.launch.py  ur5_interactive_grasp_from_human_and_table_yolo_server.launch.py  ur5_vision_based_grasp.launch.py  ur5_vision_based_grasp_marker_from_human.launch.py
vision_based_control/marker_angle_feedback/: marker_angle_0.2_0.001_0.01.csv  marker_angle_0.2_0.005_0.015.csv  marker_angle_0.3_0.008_0.05.csv  marker_angle_0.3_0.008_0.06.csv  marker_angle_0.3_0.01_0.02.csv  marker_angle_0.3_0.08_0.03.csv  marker_angle_0.4_0.005_0.02.csv  marker_angle_0.4_0.006_0.04.csv  marker_angle_0.4_0.01_0.01.csv  marker_angle_0.5_0.01_0.01.csv  marker_angle_0.5_0.01_0.01_2.csv  marker_angle_0.5_0.01_0.02.csv  marker_angle_0.5_0.02_0.01.csv  marker_angle_0.6_0.01_0.01.csv  marker_angle_0.6_0.01_0.01_2.csv  marker_angle_0.8_0.01_0.01.csv  marker_angle_1_0.003_0.003.csv  marker_angle_step1.csv  marker_angle_step2.csv  marker_angle_step3.csv  (+1 more)
(+76 files in other folders)
